fixed assert methods